fixed register overlay issue on mobile

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -15,7 +15,7 @@
     padding-right: 15px;
     padding-left: 15px;
 }
-input[type=text], input[type=email], input[type=number], input[type=password] {
+input[type=text], input[type=email], input[type=number], input[type=password], input[type=phone] {
     width: 100%;
     color: #000 !important;
 }
